--- a/aessts/stylesheet/index.css
+++ b/aessts/stylesheet/index.css
@@ -101,4 +101,40 @@ header, footer, div, section, nav, figure, figcaption, article, aside {
 }
 .header-content > h2 {
   margin-bottom: 20px;
+}
+
+.section_services {
+  width: 100%;
+  background-color: #285bbb;
+  height: 130vh;
+}
+.section_services > div {
+  width: 100%;
+}
+.section_services > div:nth-of-type(1) {
+  margin-top: 100px;
+  justify-content: space-evenly;
+}
+.section_services > div:nth-of-type(1) > section {
+  width: 235px;
+  height: 280px;
+  background-color: #fff;
+  border-radius: 7px;
+  transition: 0.06s;
+  align-content: center;
+  text-align: center;
+  justify-content: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+.section_services > div:nth-of-type(1) > section > * {
+  display: block;
+  width: 100%;
+}
+.section_services > div:nth-of-type(1) > section > img {
+  width: 50px;
+  color: black;
+}
+.section_services > div:nth-of-type(1) > section:hover {
+  transform: translateY(-60px);
+  background-color: #1c9dbf;
 }/*# sourceMappingURL=index.css.map */
