--- a/aessts/stylesheet/index.css
+++ b/aessts/stylesheet/index.css
@@ -1,1 +1,363 @@
-/*# sourceMappingURL=index.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.border-test {
+  border: 2px solid black;
+}
+
+.border-test2 {
+  border: 2px solid gold;
+}
+
+.border-test3 {
+  border: 2px solid green;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.width, header > .header_top > .contact > .email > span > img {
+  width: 100%;
+  height: 100%;
+}
+
+@font-face {
+  font-family: JosefinSans;
+  src: url(../../aessts/Font/JosefinSans-Italic-VariableFont_wght.ttf);
+}
+header {
+  width: 100%;
+  height: 75vh;
+  background-image: url(../../aessts/IMG/slider3.jpg);
+  background-size: cover;
+  background-position: center;
+  border-bottom-right-radius: 100px;
+  padding: 30px;
+  overflow: hidden;
+}
+header > .header_top {
+  width: 100%;
+  height: 40%;
+  background-color: #FFF;
+  border-radius: 8px;
+}
+header > .header_top > .contact {
+  width: 100%;
+  height: 75%;
+  display: flex;
+  justify-content: space-between;
+}
+header > .header_top > .contact > figure {
+  width: 23%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 50px;
+}
+header > .header_top > .contact > figure > img {
+  width: 100%;
+  height: 60%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+header > .header_top > .contact > .email {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header > .header_top > .contact > .email > span {
+  display: inline-block;
+  width: 60px;
+  height: 50px;
+  text-align: center;
+  margin-left: 200px;
+  color: #285BBB;
+}
+header > .header_top > .contact > .email > a {
+  font-size: px;
+  padding-left: 20px;
+  color: #444444;
+  text-transform: capitalize;
+  font-family: JosefinSans;
+  text-decoration: none;
+}
+header > .header_top > .contact > div {
+  width: 25%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header > .header_top > .contact > div > a {
+  display: inline-block;
+  width: 90%;
+  height: 50px;
+  margin-top: 20px;
+  text-align: center;
+  line-height: 50px;
+  background-color: #1c9dbf;
+  color: #FFF;
+  font-family: sans-serif;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 20px;
+  transition: 0.5s;
+}
+header > .header_top > .contact > div > a > span {
+  font-size: 30px;
+  padding-right: 10px;
+}
+header > .header_top > .contact > div > a:hover {
+  transform: translateY(-4px);
+  background-color: #224bf1;
+}
+header > .header_top > .navgition {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+header > .header_top > .navgition > nav {
+  border-radius: 10px;
+  width: 90%;
+  height: 100%;
+  background-image: linear-gradient(135deg, rgb(2, 3, 129) 0%, rgb(40, 116, 252) 100%);
+  display: flex;
+}
+header > .header_top > .navgition > nav > .left {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  border-right: 1px solid gray;
+}
+header > .header_top > .navgition > nav > .left > ul {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+header > .header_top > .navgition > nav > .left > ul > li {
+  list-style: none;
+  padding-inline: 15px;
+  position: relative;
+  transition: 0.5s;
+}
+header > .header_top > .navgition > nav > .left > ul > li > i {
+  color: rgba(255, 255, 255, 0.7019607843);
+  padding-left: 5px;
+}
+header > .header_top > .navgition > nav > .left > ul > li > a {
+  color: rgba(255, 255, 255, 0.7019607843);
+  font-family: josefinSans;
+  text-decoration: none;
+}
+header > .header_top > .navgition > nav > .left > ul > li::after {
+  content: "";
+  display: block;
+  width: 0px;
+  height: 0px;
+  border: 2px solid #FFF;
+  position: absolute;
+  left: 33px;
+  bottom: -33px;
+  opacity: 0;
+  transition: 0.5s;
+}
+header > .header_top > .navgition > nav > .left > ul > li:nth-of-type(1)::after {
+  left: 20px;
+  bottom: -33px;
+}
+header > .header_top > .navgition > nav > .left > ul > li:nth-of-type(2) > a {
+  color: #FFF;
+}
+header > .header_top > .navgition > nav > .left > ul > li:nth-of-type(2)::after {
+  opacity: 1;
+  height: 10px;
+}
+header > .header_top > .navgition > nav > .left > ul > li:hover::after {
+  height: 10px;
+  opacity: 1;
+}
+header > .header_top > .navgition > nav > .left > ul > li:hover > a {
+  color: #FFF;
+}
+header > .header_top > .navgition > nav > .left > ul > li > ul {
+  width: 300%;
+  height: 200px;
+  position: absolute;
+  background-color: #FFF;
+  left: 0;
+  bottom: -230px;
+  visibility: hidden;
+  opacity: 0;
+  transition: 1s;
+}
+header > .header_top > .navgition > nav > .left > ul > li > ul > li {
+  padding-block: 5px;
+  transform: translateX(80px);
+  list-style: none;
+  transition: 1s;
+}
+header > .header_top > .navgition > nav > .left > ul > li > ul > li > .icons-link {
+  color: #444444;
+  font-family: JosefinSans;
+  text-decoration: none;
+  transform: translateX(0px);
+}
+header > .header_top > .navgition > nav > .left > ul > li > ul > li > .icons-link:hover {
+  color: rgb(1, 1, 71);
+}
+header > .header_top > .navgition > nav > .left > ul > li:hover > ul > li {
+  transform: translateX(10px);
+}
+header > .header_top > .navgition > nav > .left > ul > li:hover > ul {
+  visibility: visible;
+  opacity: 1;
+}
+header > .header_top > .navgition > nav > .left > .icons {
+  width: 20%;
+  height: 100%;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li {
+  padding-inline: 10px;
+  list-style: none;
+  transition: 0.5s;
+  border-radius: 8px;
+  position: relative;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li > span {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 30px;
+  transition: 0.5s;
+  border-radius: 5px;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li > span > a {
+  color: #FFF;
+  text-decoration: none;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li > span:hover {
+  transform: rotateY(180deg);
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li > span:hover {
+  background-color: #1c9dbf;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li > p {
+  width: 100%;
+  height: 20px;
+  background-color: #1c9dbf;
+  font-size: 12px;
+  text-align: center;
+  line-height: 20px;
+  position: absolute;
+  left: 6px;
+  bottom: -40px;
+  opacity: 0;
+  transition: 0.4s;
+  font-size: 16px;
+  color: #FFF;
+  font-family: JosefinSans;
+  text-transform: capitalize;
+}
+header > .header_top > .navgition > nav > .left > .icons > ul > li:hover > p {
+  opacity: 1;
+}
+header > .header_top > .navgition > nav > .right {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header > .header_top > .navgition > nav > .right > * {
+  width: 50%;
+  height: 100%;
+}
+header > .header_top > .navgition > nav > .right > a {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #FFF;
+  position: relative;
+}
+header > .header_top > .navgition > nav > .right > a:nth-of-type(1) {
+  border-right: 1px solid gray;
+  transition: 0.3s;
+}
+header > .header_top > .navgition > nav > .right > a:nth-of-type(1) > div {
+  width: 300%;
+  height: 200px;
+  background-color: #FFF;
+  position: absolute;
+  left: -255px;
+  bottom: -200px;
+  -webkit-clip-path: polygon(0 5%, 80% 5%, 82.5% 0, 85% 5%, 100% 5%, 100% 100%, 0 100%);
+          clip-path: polygon(0 5%, 80% 5%, 82.5% 0, 85% 5%, 100% 5%, 100% 100%, 0 100%);
+  border-radius: 10px;
+  visibility: hidden;
+}
+header > .header_top > .navgition > nav > .right > a:nth-of-type(1):hover > div {
+  visibility: visible;
+}
+header > .row-about {
+  width: 20%;
+  height: 30%;
+  margin-top: 195px;
+}
+header > .row-about > h3 {
+  font-size: 30px;
+  font-family: JosefinSans;
+  text-transform: capitalize;
+  color: #444444;
+  font-weight: 400;
+  margin-top: 30px;
+  padding-left: 10px;
+}
+header > .row-about > div {
+  width: 60%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  background-color: #FFF;
+  border-radius: 8px;
+}
+header > .row-about > div > a {
+  text-decoration: none;
+  color: #285BBB;
+  font-size: 20px;
+}
+header > .row-about > div > span {
+  display: flex;
+  padding-inline: 10px;
+}
+header > .row-about > div > span > i {
+  padding-right: 10px;
+}
+header > .row-about > div > span > p {
+  color: #285BBB;
+  text-transform: capitalize;
+  font-family: JosefinSans;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}/*# sourceMappingURL=index.css.map */
