create extra-contact site

--- a/aessts/stylesheet/_colors.scss
+++ b/aessts/stylesheet/_colors.scss
@@ -5,6 +5,7 @@ $fourth-text-color:#FFF;
 // ______________________ END OF TEXT COLOR_________________
 $first-background-color: #1c9dbf;
 $secondry-backgrond-color:#FFF;
+$Tirdth-background-color:#285BBB;
 // _____________________ END OF BACKGROUND COLOR ________________
 .border-test{
     border: 2px solid black;
