--- a/aessts/stylesheet/index.css
+++ b/aessts/stylesheet/index.css
@@ -16,13 +16,13 @@
   border: 2px solid green;
 }
 
-.flex {
+.flex, .extra-contact > .about-medical {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.width, header > .header_top > .contact > .email > span > img {
+.width, .extra-contact > figure > img, header > .header_top > .contact > .email > span > img {
   width: 100%;
   height: 100%;
 }
@@ -360,4 +360,93 @@ header > .row-about > div > span > p {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.extra-contact {
+  width: 100%;
+  height: 80vh;
+  background-image: url(../../aessts/IMG/heart.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 20% 40%;
+}
+.extra-contact > .about-medical {
+  width: 80%;
+  height: 60%;
+  flex-direction: column;
+  margin-left: 130px;
+}
+.extra-contact > .about-medical > h2 {
+  text-transform: capitalize;
+  font-family: JosefinSans;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-top: 80px;
+  color: #444444;
+}
+.extra-contact > .about-medical > h2 > a {
+  text-decoration: none;
+  color: #285BBB;
+}
+.extra-contact > .about-medical > p {
+  color: #444444;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  margin-top: 10px;
+}
+.extra-contact > figure {
+  width: 60%;
+  height: 90vh;
+  margin-left: 250px;
+  position: relative;
+}
+.extra-contact > figure > img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+.extra-contact > figure > figcaption {
+  width: 100%;
+  height: 30%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.extra-contact > figure > figcaption > div {
+  width: 40%;
+  height: 60%;
+  background-color: #285BBB;
+  display: flex;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+.extra-contact > figure > figcaption > div > span {
+  display: inline-block;
+  width: 30%;
+  height: 100%;
+  background-color: #FFF;
+  display: grid;
+  place-items: center;
+  font-size: 2.5rem;
+  color: #285BBB;
+  border-radius: 5px;
+  transition: 0.4s;
+}
+.extra-contact > figure > figcaption > div > a {
+  width: 70%;
+  padding: 20px;
+  color: #FFF;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-family: JosefinSans;
+  font-weight: 200;
+  text-transform: capitalize;
+}
+.extra-contact > figure:hover > figcaption > div > span {
+  background-color: #1c9dbf;
+  color: #FFF;
+  transform: scale(1.1);
 }/*# sourceMappingURL=index.css.map */
