--- a/aessts/stylesheet/index.scss
+++ b/aessts/stylesheet/index.scss
@@ -6,3 +6,4 @@
 @import'../stylesheet/colors';
 @import'../../Pages/about us/header';
 @import'../../Pages/about us/extra-contact';
+@import'../../Pages/about us/get-meds-from-us';
